--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "10.4.5",
     "bootstrap": "^4.6.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
+    "node-sass": "^6.0.0",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13"
   },
