--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "bootstrap": "^4.6.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
-    "node-sass": "^6.0.0",
+    "node-pre-gyp": "^0.17.0",
+    "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
-    "vue": "^3.2.13"
+    "sqlite3": "^5.0.8",
+    "uuid": "^8.3.2",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
